--- a/products.html
+++ b/products.html
@@ -227,7 +227,7 @@
           
             <form>
               <p>
-                <input type="image" class="search_title" src="images/top/itemserch.png">
+                <input type="image" class="search_title" src="images/top/itemserch.png" alt="search-title">
                 <input type="text" class="searchs" name="search" placeholder="Search..">
                 <!--<input type="image" class="search_img" src="images/top/search_icon.png">-->
               </p>
